--- a/templates/players/detail.html
+++ b/templates/players/detail.html
@@ -15,4 +15,42 @@
   <li>{{ person.birthplace }}</li>
 </ul>
 
+
+<table class="tablesorter">
+  <thead>
+    <tr>
+      <th>Team</th>
+      <th>Year</th>
+      <th>GP</th>
+      <th>GS</th>
+      <th>Min</th>
+      <th>Goals</th>
+      <th>Assists</th>
+    <tr>
+  </thead>
+<tbody>
+{% for season in seasons %}
+<tr>
+  <td><a href="{% url team_by_id season.team.id %}">{{ season.team }}</a></td>
+  <td><a href="{% url year_stats season.year %}">{{ season.year }}</a></td>
+  <td>{{ season.games_played }}</td>
+  <td>{{ season.games_started }}</td>
+  <td>{{ season.minutes }}</td>
+  <td>{{ season.goals }}</td>
+  <td>{{ season.assists }}</td>
+</tr>
+{% endfor %}
+<tr>
+  <td></td>
+  <td></td>
+  <td>{{ career.games_played }}</td>
+  <td>{{ career.games_started }}</td>
+  <td>{{ career.minutes }}</td>
+  <td>{{ career.goals }}</td>
+  <td>{{ career.assists }}</td>
+</tr>
+</tbody>
+</table>
+
+
 {% endblock %}
