--- a/templates/salaries/list.html
+++ b/templates/salaries/list.html
@@ -27,7 +27,7 @@
 <tbody>
 {% for salary in salaries %}
 <tr>
-  <td>{{ salary.full_name }}</td>
+  <td><a href="{% url person_detail salary.player.id %}">{{ salary.player }}</a></td>
   <td>{{ salary.team }}</td>
   <td>{{ salary.base_pretty }}</td>
   <td>{{ salary.guaranteed_pretty }}</td>
