--- a/templates/teams/team.html
+++ b/templates/teams/team.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+
+<ul>
+  {% for year in years %}
+  <li><a href="{% url team_and_year team.id year %}">{{ year }}</a></li>
+  {% endfor %}
+</ul>
+
 {% with team.league as league %}
 <ul>
   <li>{{ team.full_name }}</li>
