--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,20 @@
 
   {% block extrahead %}{% endblock %}
 
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-370829-4']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
+
 </head>
 
 <body>
@@ -27,5 +41,8 @@
   {% block content %}
   {% endblock %}
   </div>
+
+
+
 </body>
 
