--- a/templates/salaries/index.html
+++ b/templates/salaries/index.html
@@ -2,19 +2,15 @@
 
 {% block content %}
 
-<ul>
-  {% for year in salary_years %}
-  <li><a href="{% url salaries_by_year year %}">{{ year }}</a></li>
-  {% endfor %}
-</ul>
-
 <table>
-{% for team, payroll in team_numbers %}
-<tr>
-  <td><a href="{% url salaries_by_team_this_year team %}">{{ team }}</a></td>
-  <td>{{ payroll }}</td>
-</tr>
-{% endfor %}
-</table>
+  {% for year in salary_years %}
+  <tr>
+    <td>{{ year }}</td>
+    <td><a href="{% url salaries_by_year year %}">full list</a></td>
+    <td><a href="{% url salaries_by_year_highlights year %}">highlights</a></td>
+
+  </tr>
+  {% endfor %}
+</table>  
 
 {% endblock %}
