--- a/templates/players/index.html
+++ b/templates/players/index.html
@@ -4,7 +4,7 @@
 
 <ul>
 {% for person in people %}
-<li><a href="{% url person_detail person.id %}">{{ person.name }}</a></li>
+<li><a href="{% url person_detail_id person.id %}">{{ person.name }}</a></li>
 {% endfor %}
 </ul>
 
