--- a/templates/base.html
+++ b/templates/base.html
@@ -44,10 +44,11 @@
 
     <div id="nav">
       <ul>
-	<li><a href="/about">About</a></li>
+	<li><a href="{% url about %}">About</a></li>
 	<li><a href="{% url story_list %}">News</a></li>
 	<li><a href="{% url stats_index %}">Stats</a></li>
 	<li><a href="{% url salaries_index %}">Salaries</a></li>
+	<li><a href="{% url scores_index %}">Scores</a></li>
       </ul>
     </div>
     <div class="clear"></div>
