--- a/templates/stats/year_leaders.html
+++ b/templates/stats/year_leaders.html
@@ -10,8 +10,8 @@
 
 {% load stats_table %}
 
-{% render_stats goals table_attrs %}
-{% render_stats assists table_attrs %}
-{% render_stats offsides table_attrs %}
+{% render_individual_stats goals table_attrs %}
+{% render_individual_stats assists table_attrs %}
+{% render_individual_stats offsides table_attrs %}
 
 {% endblock %}
