--- a/templates/schedule/game.html
+++ b/templates/schedule/game.html
@@ -10,7 +10,12 @@
 
 {{ game }}
 
-xyz
+<ul>
+  {% for goal in goals %}
+  <li>{{ goal }}</li>
+  {% endfor %}
+</ul>
+
 
 <ul>
   {% for appearance in game.home_players %}
