Commits commits commits

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<p>I'm working on an about page.  This is a website about soccer made by me, a computer programmer.</p>
+<p>Just a soccer statistics website.</p>
 
 {% endblock %}
