--- a/templates/base.html
+++ b/templates/base.html
@@ -39,16 +39,17 @@
   <div id="header">
     <div id="tagline">
     <h1><a href="/">SoccerOutsider.com</a></h1>
-    <h4><em>stats analysis and more</em></h4>
+    <h4><em>stats etc.</em></h4>
     </div>
 
     <div id="nav">
       <ul>
 	<li><a href="{% url about %}">About</a></li>
-	<li><a href="{% url story_list %}">News</a></li>
+	{% comment %}<li><a href="{% url story_list %}">News</a></li>{% endcomment %}
 	<li><a href="{% url stats_index %}">Stats</a></li>
 	<li><a href="{% url salaries_index %}">Salaries</a></li>
-	<li><a href="{% url scores_index %}">Scores</a></li>
+	<li><a href="{% url draft_index %}">Drafts</a></li>
+	{% comment %}<li><a href="{% url scores_index %}">Scores</a></li>{% endcomment %}
       </ul>
     </div>
     <div class="clear"></div>
@@ -59,6 +60,9 @@
   {% block content %}
   {% endblock %}
   </div>
+
+<div id="footer">
+</div>
 
 
 
