--- a/templates/drafts/detail.html
+++ b/templates/drafts/detail.html
@@ -8,11 +8,15 @@
 
 {% block content %}
 
+<h3>{{ this_draft.name }}</h3>
+
+{% comment %}
 <ul>
   {% for draft in other_drafts %}
   <li><a href="{% url draft_compare this_draft.id draft.id %}">{{ draft.name }}</a></li>
   {% endfor %}
 </ul>
+{% endcomment %}
 
 
 <table class="tablesorter">
@@ -37,5 +41,16 @@
 {% endfor %}
 </tbody>
 </table>
+
+<h3>Picks by Team</h3>
+{% for team, picks in by_team %}
+<h4>{{ team }}</h4>
+<ul>
+  {% for pick in picks %}
+  <li>{{ pick.number }}. {{ pick.name }}</li>
+  {% endfor %}
+</ul>
+{% endfor %}
+  
 
 {% endblock %}
