--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
-<p>Just a soccer statistics website.</p>
+<p>Just a simple soccer statistics website.  Currently just a little baby.</p>
+
+<p>Send any email to <a href="mailto:chrisedgemon@gmail.com">chrisedgemon@gmail.com</a></p>
 
 {% endblock %}
