--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 
   <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" media="screen" >
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="{{ MEDIA_URL}}js/jquery.tablesorter.min.js"></script>
   <script type="text/javascript" src="{{ MEDIA_URL }}js/cufon-yui.js"></script>
   <script type="text/javascript" src="{{ MEDIA_URL }}js/melbourne.font.js"></script>
