--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,18 @@
 {% block content %}
 
 
-Nothing to see here.
+<p>We're working here.</p>
 
-{% comment %}
-<div id="news">
-<h3>News</h3>
-{% for e in news %}
-<h4><a href="{{ e.url }}">{{ e.title }} ({{ e.source }})</a></h4>
-<h4>{{ e.pub_date }}</h4>
-<p>{{ e.summary|safe }}</p>
-<p class="read_more"><a href="{{ e.url }}">Read More</a></p>
-{% endfor %}
-<a href="{% url story_list %}">More news</a>
+<p>Gotta get some scores!</p>
+
+{% for game in games %}
+
+<div>
+  {{ game.home_team }} v. {{ game.away_team }}
+  {{ game.home_score }} - {{ game.away_score }}
+  {{ game.date }}
 </div>
 
-{% endcomment %}
+{% endfor %}
 
 {% endblock %}
