Add nasl aliases.

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,12 @@
 
     <div id="nav">
       <ul>
-	<li><a href="{% url about %}">About</a></li>
-	{% comment %}<li><a href="{% url story_list %}">News</a></li>{% endcomment %}
-	<li><a href="{% url stats_index %}">Stats</a></li>
-	<li><a href="{% url salaries_index %}">Salaries</a></li>
-	<li><a href="{% url draft_index %}">Drafts</a></li>
-	{% comment %}<li><a href="{% url scores_index %}">Scores</a></li>{% endcomment %}
+	    {% comment %}<li><a href="{% url story_list %}">News</a></li>{% endcomment %}
+	    <li><a href="{% url scores_index %}">Scores</a></li>
+	    <li><a href="{% url stats_index %}">Stats</a></li>
+	    <li><a href="{% url salaries_index %}">Salaries</a></li>
+	    <li><a href="{% url draft_index %}">Drafts</a></li>
+	    <li><a href="{% url about %}">About</a></li>
       </ul>
     </div>
     <div class="clear"></div>
