Add teams to nav.

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
 	    <li><a href="{% url stats_index %}">Stats</a></li>
 	    <li><a href="{% url salaries_index %}">Salaries</a></li>
 	    <li><a href="{% url draft_index %}">Drafts</a></li>
+	    <li><a href="{% url teams_index %}">Teams</a></li>
 	    <li><a href="{% url about %}">About</a></li>
       </ul>
     </div>
