Strip out team_by_id; we're just using team_detail with slugs now.

--- a/templates/leagues/league.html
+++ b/templates/leagues/league.html
@@ -6,7 +6,7 @@
 
 <ul>
   {% for team in teams %}
-  <li><a href="{% url team_by_id team.id %}">{{ team.short_name }}</a></li>
+  <li><a href="{% url team_detail team.slug %}">{{ team.short_name }}</a></li>
   {% endfor %}
 </ul>
 
