--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -10,7 +10,7 @@
 </tr>
 {% for team in teams %}
 <tr>
-  <td><a href="{% url team_by_id team.id %}">{{ team.name }}</a></td>
+  <td><a href="{% url team_detail team.slug %}">{{ team.name }}</a></td>
   <td>{{ team.league }}</td>
   <td>{{ team.founded }}</td>
 </tr>
