--- a/templates/templatetags/individual_stats.html
+++ b/templates/templatetags/individual_stats.html
@@ -15,7 +15,7 @@
 {% for stat in stat_list %}
 <tr>
   <td><a href="{% url person_detail_id stat.player.id %}">{{ stat.player }}</a></td>
-  <td><a href="{% url team_by_id stat.team.id %}">{{ stat.team }}</a></td>
+  <td><a href="{% url team_detail stat.team.slug %}">{{ stat.team }}</a></td>
   <td><a href="{% url year_stats stat.year %}">{{ stat.year }}</a></td>
   {% for arg in table_attrs %}
   <td>{{ stat|getattribute:arg.1 }}</td>
