--- a/templates/teams/schedule.html
+++ b/templates/teams/schedule.html
@@ -8,9 +8,9 @@
   {% for game in games %}
   <tr>
     <td><a href="{% url game_detail game.id %}">{{ game.date }}</a></td>
-    <td>{{ game.home_team }}</td>
+    <td><a href="{% url team_detail game.home_team.slug %}">{{ game.home_team }}</a></td>
     <td>{{ game.score }}</td>
-    <td>{{ game.away_team }}</td>
+    <td><a href="{% url team_detail game.away_team.slug %}">{{ game.away_team }}</a></td>
   </tr>
   {% endfor %}
   
