--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 
-<p>We're working here.</p>
+<p>Developing into a large, open soccer statistics website.
 
-<p>Gotta get some scores!</p>
+
 
 {% for game in games %}
 
